--- a/src/style.css
+++ b/src/style.css
@@ -6,33 +6,58 @@ body {
   width: auto;
   background: linear-gradient(
     90deg,
-    rgba(191, 57, 137, 1) 10%,
-    rgba(9, 107, 222, 1) 70%
+    rgb(57, 166, 191) 10%,
+    rgb(120, 172, 231) 70%
   );
-  justify-content: space-between;
-  font-family: arial, serif;
-  font-size: 0.8rem;
+  justify-content: center;
+  align-items: center;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 1rem;
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-}
-
-.active-list {
-  font-weight: 800;
-  color: white;
 }
 
 .hidden {
   display: none;
 }
 
-section {
-  margin: 10px;
+.section1 {
+  margin-bottom: 20px;
+}
+
+.section2 {
+  margin-top: 20px;
+}
+
+.section3 {
+  margin-top: 100px;
+}
+
+.locationContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0;
+  padding: 0;
+  color: white;
+}
+
+.locationContainer p {
+  margin: 0;
+  padding-top: 0.5rem;
+}
+
+.creditDiv {
+  display: flex;
+  color: white;
+  align-items: center;
+gap: 10px;
 }
 
 h1 {
   font-size: 3rem;
-  font-family: "Arial Narrow Bold", sans-serif;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   color: white;
   filter: drop-shadow(0px 3px 3px rgba(0, 0, 0, 0.7));
   font-weight: 600;
@@ -41,37 +66,34 @@ h1 {
 
 form {
   display: flex;
+  align-items: center;
+  flex-direction: column;
   margin-bottom: 2rem;
+  color: white
 }
 
 input {
-  background-color: #ffffff69;
-  color: rgba(255, 255, 255, 0.512);
+  background-color: #ffffff;
+  color: rgb(38, 38, 38);
+  border-radius: 4px;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  padding: 5px;
 }
 
 ::placeholder {
-  color: white;
+  color: slategray;
   font-style: italic;
-}
-
-[type="text"],
-button {
-  display: inline-block;
-  padding: 0.5rem 1rem;
-  font-size: 0.8rem;
-  border: 1px solid #ccc;
-  border-radius: 5px;
 }
 
 button {
   cursor: pointer;
-  background: #777777;
-  color: white;
+  background: #ffffff;
+  color: #007bff;
+  border: 2px solid #007bff;
   margin: 0 0.5rem;
-}
-
-[type="text"] {
-  width: 100%;
+  padding: 0.5rem 1rem;
+  border-radius: 4px;
 }
 
 [type="text"]:active,
@@ -80,47 +102,12 @@ button {
   border: 2px solid #007bff;
 }
 
-[type="checkbox"] {
-  margin-right: 1rem;
-  font-size: 2rem;
-}
-
-ul {
-  padding: 0;
-}
-
-li {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0.5rem;
-  margin-bottom: 1rem;
-  background: #7777778b;
-  border-radius: 5px;
-  color: white;
-}
-
-li span {
-  flex: 1;
-  display: inline-block;
-  padding: 0.5rem;
-  width: 250px;
-  border-radius: 5px;
-}
-li span:hover {
-  background: rgba(179, 215, 255, 0.52);
-}
-
-li span:focus {
-  outline: 0;
-  border: 2px solid #007bff;
-  background: rgba(179, 207, 255, 0.52);
-}
-
 footer {
   background-color: rgba(173, 216, 230, 0.274);
   padding: 20px;
   width: 100vw;
+  position: static;
+  margin-top: 20px;
 }
 
 .footerContainer {
