--- a/src/style.css
+++ b/src/style.css
@@ -5,11 +5,11 @@ body {
   min-width: 375px;
   width: auto;
   background: linear-gradient(
-    90deg,
-    rgb(57, 166, 191) 10%,
-    rgb(120, 172, 231) 70%
+    180deg,
+    rgb(82, 189, 213) 30%,
+    rgb(103, 162, 228) 70%
   );
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-size: 1rem;
@@ -22,6 +22,12 @@ body {
   display: none;
 }
 
+header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .section1 {
   margin-bottom: 20px;
 }
@@ -31,7 +37,8 @@ body {
 }
 
 .section3 {
-  margin-top: 100px;
+  position: fixed;
+  bottom: 10%;
 }
 
 .locationContainer {
@@ -52,16 +59,30 @@ body {
   display: flex;
   color: white;
   align-items: center;
-gap: 10px;
+  gap: 10px;
+}
+
+.creditDiv a {
+  text-decoration: none;
+  color: white;
 }
 
 h1 {
   font-size: 3rem;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  color: white;
-  filter: drop-shadow(0px 3px 3px rgba(0, 0, 0, 0.7));
-  font-weight: 600;
-  font-stretch: extra-condensed;
+  color: rgba(255, 255, 255, 0.753);
+  font-weight: 700;
+  font-stretch: expanded;
+  margin-bottom: 0;
+}
+
+h2 {
+  font-size: 1.5rem;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  color: rgba(255, 255, 255, 0.752);
+  font-weight: 700;
+  font-stretch: expanded;
+  margin: 0;
 }
 
 form {
@@ -69,16 +90,18 @@ form {
   align-items: center;
   flex-direction: column;
   margin-bottom: 2rem;
-  color: white
+  color: white;
 }
 
 input {
-  background-color: #ffffff;
+  background-color: #ffffff75;
   color: rgb(38, 38, 38);
-  border-radius: 4px;
+  border: 1px solid white;
+  border-radius: 4px ;
   margin-top: 1rem;
   margin-bottom: 1rem;
   padding: 5px;
+  width: 15rem;
 }
 
 ::placeholder {
@@ -88,9 +111,13 @@ input {
 
 button {
   cursor: pointer;
-  background: #ffffff;
-  color: #007bff;
-  border: 2px solid #007bff;
+  background: linear-gradient(
+    90deg,
+    rgba(228, 138, 49, 0.849) 30%,
+    rgba(182, 103, 228, 0.861) 70%
+  );
+  color: white;
+  border: 2px solid rgba(245, 245, 245, 0.537);
   margin: 0 0.5rem;
   padding: 0.5rem 1rem;
   border-radius: 4px;
@@ -106,7 +133,8 @@ footer {
   background-color: rgba(173, 216, 230, 0.274);
   padding: 20px;
   width: 100vw;
-  position: static;
+  position: fixed;
+  bottom: 0;
   margin-top: 20px;
 }
 
@@ -124,4 +152,21 @@ footer {
 
 .footerContainer p {
   color: white;
+}
+
+@media (max-width: 1000px) {
+  h1 {
+    font-size: 2rem;
+    margin-top: 20px;
+  }
+  h2 {
+    font-size: 1rem;
+  }
+  body {
+    font-size: 0.8rem;
+  }
+  .section3 {
+    position: fixed;
+    bottom: 15%;
+  }
 }
